--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,6 @@
         "bin-dir": "bin"
     },
     "bin": ["app/lightsaml"],
-    "prefer-stable": true,
-    "minimum-stability": "stable"
+    "prefer-stable": false,
+    "minimum-stability": "dev"
 }
